<resources>
    <string name="app_name">Around the World</string>
    <string name="get_started">Let\'s get started</string>
    <string name="countries_button">Countries</string>
    <string name="mytrips_button">My Trips</string>
    <string name="country_name">Country Name</string>
    <string name="country_name_label">Name: </string>
    <string name="country_capital_label">Capital: </string>
    <string name="newtrip_button">New Trip</string>
    <string name="new_trip_header">New Trip</string>
    <string name="new_trip_name_label">Trip name: </string>
    <string name="new_trip_description_label">Description: </string>
    <string name="new_trip_airline_label">Airline: </string>
    <string name="new_trip_booking_label">Booking Nr: </string>
    <string name="new_trip_accomodation_label">Accommodation: </string>
    <string name="new_trip_dates_label">Dates: </string>
    <string name="pick_from_date">From</string>
    <string name="pick_to_date">To</string>
    <string name="country_region_label">Region: </string>
    <string name="country_language_label">Language: </string>
    <string name="country_currency_label">Currency: </string>
    <string name="trip_name_label">Name: </string>
    <string name="bottom_menu_countries">Countries</string>
    <string name="bottom_menu_trips">Trips</string>
    <string name="country_flag">Country flag</string>
    <string name="upload_your_favorite_pictures">Upload your favorite pictures</string>
    <string name="date_from">From: </string>
    <string name="date_to">To: </string>
    <string name="logout_menu">Logout</string>
    <string name="error_failed_to_log_out">Failed to Logout</string>
    <string name="create_a_new_trip">Create a new trip</string>
    <string name="app_title_login">Around The World</string>
    <string name="signin_with_email">SIGN IN WITH EMAIL</string>
    <string name="signin_with_google">SIGN IN WITH GOOGLE</string>
    <string name="countries_been_title">Keep track of the countries where you have been…</string>
    <string name="save_trips_title">…and save your upcoming trips</string>
    <string name="create_your_account">Create your account</string>
    <string name="and_start_exploring">…and start exploring</string>
    <string name="enter_airline">Enter airline…</string>
    <string name="enter_booking_number">Enter booking number…</string>
    <string name="accomodation_name">Accommodation name…</string>
    <string name="save_trip">Save</string>
    <string name="trip_detail_description_label">Trip description:</string>
    <string name="airline_detail_label">Airline:</string>
    <string name="accomodation_detail_label">Accommodation: </string>
    <string name="bookingnr_detail_label">Booking number:</string>
    <string name="capture_photo_from_camera">Capture photo from camera</string>
    <string name="select_photo_from_gallery">Select photo from gallery</string>
    <string name="countries_been">Countries Been</string>
    <string name="expanded_trip_view_image">expanded trip view image</string>
    <string name="trip_title_label">Trip:</string>

</resources>