<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="trip"
            type="com.example.android.capstoneproject_aroundtheworld.models.Trip" />
        <variable
            name="viewmodel"
            type="com.example.android.capstoneproject_aroundtheworld.trips.TripsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/trip_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".countries.detail.CountryDetailFragment"
            android:background="@drawable/home_screen_background">

            <TextView
                android:id="@+id/trip_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@{trip.name}"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/trip_details_card_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/trip_name_detail_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="50dp"
                        android:text="@string/trip_name_label"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/trip_description_detail_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/new_trip_description_label"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/trip_name_detail_label" />

                    <TextView
                        android:id="@+id/trip_name__detail_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:text="@{trip.name}"
                        app:layout_constraintBaseline_toBaselineOf="@+id/trip_name_detail_label"
                        app:layout_constraintStart_toEndOf="@+id/trip_name_detail_label" />

                    <TextView
                        android:id="@+id/trip_description_detail_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:text="@{trip.description}"
                        app:layout_constraintBaseline_toBaselineOf="@+id/trip_description_detail_label"
                        app:layout_constraintStart_toEndOf="@+id/trip_description_detail_label" />

                    <TextView
                        android:id="@+id/trip_date_from_detail_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@{trip.dateFrom}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/trip_date_to_detail_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@{trip.dateTo}"
                        app:layout_constraintBaseline_toBaselineOf="@+id/trip_date_from_detail_text"
                        app:layout_constraintStart_toEndOf="@+id/trip_date_from_detail_text" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/favotite_pictures_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:text="@string/upload_your_favorite_pictures"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trip_details_card_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/image_list_recycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favotite_pictures_text_view" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>